--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,6 @@ userName.not.empty.error=Please provide a user name
 userName.too.short.error=Your username must have at least {min} characters
 password.not.empty.error=Please provide a password
 password.too.short.error=Your password must have at least {min} characters
+age.out.of.range.error=Age must be between {min} and {max}
+height.out.of.range.error=Height must be between {min} and {max}
 
