--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,9 @@
+jakarta.validation.constraints.NotNull.message=Please provide required value
 userName.not.empty.error=Please provide a user name
 userName.too.short.error=Your username must have at least {min} characters
 password.not.empty.error=Please provide a password
 password.too.short.error=Your password must have at least {min} characters
 age.out.of.range.error=Age must be between {min} and {max}
 height.out.of.range.error=Height must be between {min} and {max}
-
+weight.too.low.error=Minimum weight is {value}
+weight.too.high.error=Maximum weight is {value}
