addLatestWeight form ready

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ age.out.of.range.error=Age must be between {min} and {max}
 height.out.of.range.error=Height must be between {min} and {max}
 weight.too.low.error=Minimum weight is {value}
 weight.too.high.error=Maximum weight is {value}
+date.from.future.error=Date cannot be from the future
