--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ height.out.of.range.error=Height must be between {min} and {max}
 weight.too.low.error=Minimum weight is {value}
 weight.too.high.error=Maximum weight is {value}
 date.from.future.error=Date cannot be from the future
+isAdult.error.message=User must be between 18 and 100 years old
